--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "proxy-checker",
   "version": "1.0.0",
-  "main": "/src/index.js",
+  "main": "/src/main.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/main.js"
   },
   "repository": {
     "type": "git",
